tests/errors/type_check/place_typing/place_unknown_field.sim

        struct P { x: i64 }
        fn f(p: P) {
            a: i64;
            entry:
            a = copy p.z;
            return
        }
        